source/ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx

      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

      nodeSelector:
        kubernetes.io/hostname: homelab-control-plane

      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.15.1

          args:
            - /nginx-ingress-controller
            - --ingress-class=nginx
            - --controller-class=k8s.io/ingress-nginx
            - --publish-status-address=127.0.0.1

          ports:
            - containerPort: 80
            - containerPort: 443

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
